src/test/deca/context/valid/class_method_return_bool.deca
// Test une classe retournant un boolean

class DummyClass {
    boolean getBool(){
        boolean bool_t = true;
        return bool_t;
    }
}