src/test/deca/context/invalid/inst_return_in_void_method_bool.deca
// Test la règle 3.24: Pas le droit de return un boolean
// alors qu'on attend pas de return

class A  {
    void getFloat(){
        return true;
    }
}

// Resultat:

//TODOTEST